--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,10 @@ section{
     z-index: 100;
 }
 
+.header.sticky {
+    border-bottom: .1rem solid rgba(0,0,0,0.2);
+}
+
 .logo{
     font-size: 2.5rem;
     color: var(--text-color);
@@ -362,3 +366,27 @@ span{
     font-size: 2.4rem;
     color: var(--second-bf-color);
 }
+
+
+/* BREAKPOINTS SCREEN viewport*/
+
+@media (max-width: 1200px){
+    html{
+        font-size: 55%;
+    }
+}
+
+@media (max-width: 1200px){
+    .header {
+        padding: 2rem 3%;
+    }
+
+    section {
+        padding: 10rem 3% 2rem;
+    }
+
+    .footer{
+        padding: 2rem 3%;
+    }
+}
+
